# repaddu

./: .gitignore  .gitmodules  AGENT_TESTING_PLAN.md  CHANGELOG.md  CMakeLists.txt  GEMINI.md  PLAN.md  README.md  TEST_INFO.txt  build.sh  recommended_presets.yaml  report_card.md  run_app.sh
.github/workflows/: ci.yml
docs/: GUIDE.md  architecture_layers.md  cli_spec.md  error_handling_contract.md  perf_analysis_tags_baseline.sh  perf_baseline.md  perf_regression_guard.sh  refactor_master_plan.md  run_eval_smoke.sh
docs/components/: README.md
docs/components/analysis/: README.md
docs/components/base/: README.md
docs/components/cli/: README.md
docs/components/entrypoint/: README.md
docs/components/format/: README.md
docs/components/grouping/: README.md
docs/components/io/: README.md
docs/components/ui/: README.md
fixtures/: README.md
fixtures/analysis_cpp/: sample.cpp
fixtures/analysis_lsp/: document_symbols.json  implementations.json  type_hierarchy_supertypes.json
fixtures/multi_language/c/: Makefile  main.c
fixtures/multi_language/cpp/: CMakeLists.txt
fixtures/multi_language/node/: package.json
fixtures/multi_language/python/: pyproject.toml
fixtures/multi_language/rust/: Cargo.toml
fixtures/sample_repo/: CMakeLists.txt
fixtures/sample_repo/docs/: readme.txt
fixtures/sample_repo/src/: main.cpp
fixtures/sample_repo/subproj/: CMakeLists.txt
include/repaddu/: analysis_cpp.h  analysis_graph.h  analysis_lsp.h  analysis_tags.h  analysis_tokens.h  analysis_view.h  app_analyze.h  app_run.h  cli_bootstrap.h  cli_parse.h  cli_run.h  config_generator.h  core_types.h  entrypoint_main.h  format_analysis_json.h  format_analysis_report.h  format_analysis_tags.h  format_language_report.h  format_tree.h  format_writer.h  grouping_component_map.h  grouping_strategies.h  io_binary.h  io_traversal.h  json_lite.h  language_profiles.h  logger.h  pii_redactor.h  ui_console.h  ui_interface.h  ui_plain.h
include/repaddu/app/: analysis_backend.h  app_analyze.h  effective_options.h  fs_services.h
include/repaddu/format/: analysis_tags_report.h
src/: analysis_cpp.cpp  analysis_graph.cpp  analysis_lsp.cpp  analysis_tags.cpp  analysis_tokens.cpp  analysis_view.cpp  app_analyze.cpp  app_run.cpp  cli_bootstrap.cpp  cli_parse.cpp  cli_parse_config.cpp  cli_parse_help.cpp  cli_parse_policy.cpp  cli_parse_policy.h  cli_parse_values.cpp  cli_parse_values.h  cli_run.cpp  config_generator.cpp  core_types.cpp  entrypoint_main.cpp  format_analysis_json.cpp  format_analysis_report.cpp  format_analysis_tags.cpp  format_language_report.cpp  format_tree.cpp  format_writer.cpp  format_writer_alt_formats.cpp  format_writer_alt_formats.h  format_writer_internal.h  format_writer_markdown.cpp  format_writer_plan.cpp  format_writer_read.cpp  grouping_component_map.cpp  grouping_strategies.cpp  io_binary.cpp  io_traversal.cpp  json_lite.cpp  language_profiles.cpp  logger.cpp  main.cpp  (+3 more)
src/app/: analysis_backend_default.cpp  app_analyze.cpp  effective_options.cpp  fs_services.cpp
src/format/: analysis_tags_report.cpp
tests/: test_analysis.cpp  test_analysis_cpp.cpp  test_analysis_graph.cpp  test_analysis_json.cpp  test_analysis_lsp.cpp  test_analysis_tags_report.cpp  test_analysis_views.cpp  test_app_run.cpp  test_binary_detection.cpp  test_cli_config_path.cpp  test_cli_parse_analysis.cpp  test_cmake_aggregation.cpp  test_concurrency.cpp  test_config_analysis.cpp  test_dry_run.cpp  test_filtering.cpp  test_fixture_picobench.cpp  test_frontmatter_output.cpp  test_grouping.cpp  test_isolate_docs.cpp  test_language_profiles_detection.cpp  test_large_file.cpp  test_logging.cpp  test_lsp_client.cpp  test_lsp_relationships.cpp  test_lsp_symbols.cpp  test_multilanguage_fixture.cpp  test_pii.cpp  test_tags.cpp  test_tokens.cpp  test_ui.cpp
tools/: check_component_deps.sh
